welcome.lessons.welcome.bat.bool2.SquirrelPlay.scala.error
squirrelPlay:5: error: ';' expected but 'return' found.
    elser return false
          ^squirrelPlay:10: error: ';' expected but 'return' found.
    elser return false
          ^